# codex_try

./: .coveragerc  .cursor.json  .env.example  .gitignore  INTEGRATION_NOTES.md  LICENSE  Mapping_UI_backend.txt  README.md  corpus_dir_use.json  corpus_root_ocurrences.json  patch.json  pytest.ini  requirements-dev.txt  requirements.runtime.txt  requirements.txt  ui-signal-audit.md  ui_backend_integration_rules.py
CorpusBuilderApp/: INSTALLATION.md  RUN_COLLECTORS_HERE.ipynb  __init__.py  cli.py  launch_app.bat  pytest.ini  requirements.txt  setup-and-docs.md  setup.py  upgrade_dependencies.py
CorpusBuilderApp/CryptoFinanceCorpusBuilder/readmes/deprecated/: CANONICAL_ENTRY_POINTS.md  CONVO.TXT  DEPLOYMENT_PLAN_20240511.md  Phase 2 Pipeline Integration Guide.md  Phase 2 non pdf enhancement plan.md  README FULL.md  README.md  README_collectors.md  README_command lines.md  balancer integration guide and examples.md  corpusbalancerreport.md  latest system review.md  pyproject.toml
archive/: extract_title_cache.py  gen_config_schema.py
audit_reports/: backend_audit_summary.json  pytest_output.txt  tests_first_pass.json
cli/: __init__.py  execute_from_config.py
cli_support/: sitecustomize.py
config from c disk/: config.yaml
docs/: Mapping_UI_backend_checked.txt  WRAPPER_ARCHITECTURE_GUIDE.md  cli_vs_gui_matrix.md  environment_config.md  progress_log.md  test_plan_v1.md  user_guide.md  wrapper_template.py
scripts/: audit_integration_state.py  clean_pycache_and_stubs.py  diagnose_counts.py  organize_extracted.py  pre_push.sh
tests/: COMMAND_GUIDE.md  conftest.py  (+6 more)
(+752 files in other folders)
